--- a/spam-text-classification.ipynb
+++ b/spam-text-classification.ipynb
@@ -46,6 +46,11 @@
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import classification_report, accuracy_score\n"
+    "from sklearn.pipeline import Pipeline"
+    "from sklearn.naive_bayes import MultinomialNB"
+    "from sklearn.svm import LinearSVC"
+    "from sklearn.model_selection import cross_val_score"
+
    ]
   },
   {
