--- a/spam-text-classification.ipynb
+++ b/spam-text-classification.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "id": "d21d2d9b",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,11 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, accuracy_score\n"
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.model_selection import cross_val_score\n"
    ]
   },
   {
@@ -60,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "id": "72255b86",
    "metadata": {},
    "outputs": [
@@ -92,7 +96,7 @@
        " None)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "id": "05180cc0",
    "metadata": {},
    "outputs": [
@@ -192,7 +196,7 @@
        "4       5  This is the 2nd time we have tried 2 contact u...      Spam"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 45,
    "id": "7ade5d0c",
    "metadata": {},
    "outputs": [],
@@ -236,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "id": "a4920d15-3285-41f6-aff6-7ccba3f85e5c",
    "metadata": {},
    "outputs": [],
@@ -244,6 +248,7 @@
     "pipelines = {\n",
     "    \"Logistic Regression\": Pipeline([\n",
     "        (\"tfidf\", TfidfVectorizer(\n",
+    "            lowercase=True,\n",
     "            stop_words=\"english\",\n",
     "            ngram_range=(1, 2),\n",
     "            max_df=0.95\n",
@@ -257,6 +262,7 @@
     "\n",
     "    \"Naive Bayes\": Pipeline([\n",
     "        (\"tfidf\", TfidfVectorizer(\n",
+    "            lowercase=True,\n",
     "            stop_words=\"english\",\n",
     "            ngram_range=(1, 2),\n",
     "            max_df=0.95\n",
@@ -266,6 +272,7 @@
     "\n",
     "    \"Linear SVM\": Pipeline([\n",
     "        (\"tfidf\", TfidfVectorizer(\n",
+    "            lowercase=True,\n",
     "            stop_words=\"english\",\n",
     "            ngram_range=(1, 2),\n",
     "            max_df=0.95\n",
@@ -280,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 59,
    "id": "b9c92765-5718-4014-be48-7b25578ed0cf",
    "metadata": {},
    "outputs": [
@@ -372,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 60,
    "id": "d2cd75ce-dced-4e3a-a4a0-2bd605cf2260",
    "metadata": {},
    "outputs": [
@@ -442,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "id": "ee8ed417-9dd1-43df-8b22-2681ad8e4b19",
    "metadata": {},
    "outputs": [
@@ -523,7 +530,7 @@
        "33         Non-Spam  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 62,
    "id": "842f7be5-7f24-4a87-b374-f4fa6185c655",
    "metadata": {},
    "outputs": [
@@ -592,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 63,
    "id": "e7287db8-a2d5-448d-a829-f9511f062eb5",
    "metadata": {},
    "outputs": [
@@ -602,7 +609,7 @@
        "['spam_classifier_pipeline.pkl']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
